# prism-ids

./: .gitignore  README.md
prism_dashboard/: README.md  pubspec.yaml
prism_dashboard/lib/: main.dart
prism_dashboard/lib/models/: prism_data.dart
prism_dashboard/lib/providers/: prism_provider.dart
prism_dashboard/lib/screens/: hids_screen.dart  nids_screen.dart  settings_screen.dart
prism_dashboard/lib/widgets/: alert_widgets.dart  graph_widgets.dart  metrics_widgets.dart  screen_layout.dart  settings_widgets.dart  status_widgets.dart
prism_dashboard/linux/: CMakeLists.txt
prism_dashboard/linux/runner/: my_application.cc
prism_dashboard/windows/: CMakeLists.txt
prism_dashboard/windows/runner/: Runner.rc  main.cpp
prism_engine/: Cargo.toml
prism_engine/prism_dashboard/: pubspec.yaml
prism_engine/src/: host.rs  main.rs  models.rs  network.rs
