[package]
name = "prism_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
etherparse = "0.20.1"
futures-util = { version = "0.3.32", features = ["sink", "std"] }
pcap = "2.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = "0.29.0"
